@@ -1,3 +1,3 @@
-MD5 06e7d3b84cd77a391c4170823cc5c439 jot-9.0.ebuild 762
-MD5 814f5584247523e7d995aa5a1dddfb41 ChangeLog 398
+MD5 2323e48591bb67846437c4cbe447982c ChangeLog 539
+MD5 d671d446fbbb31efafc301ca6548249b jot-9.0.ebuild 587
 MD5 5a4263e2d5865b49094087967b5359e3 files/digest-jot-9.0 68
